feat: split into modern and legacy jars, covering 1.16.5 - 1.21.x
One source tree now produces two jars:

  WorldMood-<v>.jar          Java 17 bytecode, built against 1.20.1 API, api-version 1.20
  WorldMood-<v>-legacy.jar   Java 8  bytecode, built against 1.16.5 API, api-version 1.16

Two things forced the split rather than a single jar. Servers below 1.18 run on
Java 8-16 JVMs, which cannot load modern class files at all; and api-version has
to honestly state the oldest API each jar targets.

The source is identical between them. It compiles against both APIs because
every symbol Mojang renamed or added is now resolved BY NAME at runtime in the
new Compat class, so the code never mentions a constant that only one API has:

- Particles renamed in 1.20.5: DUST/REDSTONE, SMOKE/SMOKE_NORMAL,
  HAPPY_VILLAGER/VILLAGER_HAPPY, FIREWORK/FIREWORKS_SPARK,
  TOTEM_OF_UNDYING/TOTEM, ENCHANTED_HIT/CRIT_MAGIC, EXPLOSION/EXPLOSION_NORMAL.
- Potion effects renamed in 1.20.5: SLOWNESS/SLOW, HASTE/FAST_DIGGING,
  MINING_FATIGUE/SLOW_DIGGING, JUMP_BOOST/JUMP, NAUSEA/CONFUSION.
- Attributes renamed in 1.21.3, when Attribute also stopped being an enum -
  hence field reflection rather than valueOf.
- Enchantment FIRE_PROTECTION/PROTECTION_FIRE (1.20.5).
- Criteria.DUMMY scoreboard overload (1.20.1+), WorldBorder.getMaxSize,
  Particle.DustTransition (1.17+) and MerchantRecipe special pricing (1.18+),
  all reflective with working fallbacks.
- Material lookups by name for the deepslate/copper ores (1.17+) and SCULK
  (1.19+), which would otherwise throw NoSuchFieldError during class load.

Anything genuinely unavailable resolves to null and the mood degrades instead of
throwing. Compat.logSupportSummary prints what the running version does and does
not support at startup.

Shared source lowered to Java 8 syntax so the legacy build compiles: pattern
matching instanceof, switch expressions, List.of and Set.of all removed.

Verified by booting real servers and driving all seven moods over